# sql-parser-poc

./: .gitignore  README.md  check_datahub_metadata.py  dsp_datahub_investigation.md  extract_iceberg_urns.py  main.py  migrate_metadata_pilot.py  migrate_table_description.py  pyproject.toml  test_datahub_api.py
core/: analyzer.py  analyzer_bak.py  parser.py  sessionizer.py
database/: connection.py  init_db.py  schema.sql
